--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@microsoft/signalr": "^8.0.7",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.3",
     "lodash.throttle": "^4.1.1",
     "next": "15.3.5",
     "react": "^19.0.0",
