--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: "3.8"
 
 services:
   frontend:
-    build: ../frontend
+    build: ./frontend
     ports:
       - "3000:3000"
 
   backend:
-    build: ../backend
+    build: ./backend
     ports:
       - "5000:8080"
 
